# SmartCalc_v2.0

./: README.md
src/: CMakeLists.txt  Makefile  smartcalc.texi
src/Controller/: Controller.cc  Controller.h
src/Model/: Model.cc  Model.h
src/Testing/: tests.cc
src/View/: View.cc  View.h  View.ui  ViewCredit.ui
